# Pokemon-Battler

./: CMakeLists.txt  Pokemon.h  README.md  main.cpp  main.py
game/: pokemon_selection.py  scrape.py
src/: Battle.cpp  Move.cpp  Move.h  Pokeball.cpp  Pokeball.h  Pokemon.cpp  Pokemon.h  Trainer.cpp  Trainer.h  battle.py  pokemon.py  trainer.py
src/include/: Battle.h  Pokeball.h  Pokemon.h  Trainer.h
src/types/: electric.py  fire.py  grass.py  normal.py  water.py
test/: test_battle.py  test_types.py
